working encryption and decryption

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
     <label title="E">E: </label><input type="text" id="e-input"/>
     <label title="D">D: </label><input type="text" id="d-input"/> <button id="ed-button">Check E and D</button>
 
+    <p>Enter a message in plaintext here:</p>
+    <textarea id="msg-plaintext" rows=5 cols=80></textarea>
+    <br />
+    <button id="msg-plaintext-btn">Encode</button>
+    <p>ASCII encoded message:</p>
+    <textarea id="msg-ascii" rows=5 cols=80></textarea>
+    <p>Encrypted Message:</p>
+    <textarea id="msg-encoded" rows=5 cols=80></textarea>
+    <p>Decoded Message:</p>
+    <textarea id="msg-decrypted" rows=5 cols=80></textarea>
+
     <script src="script.js"></script>
   </body>
 </html>
