--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <title>RSA Worksheet</title>
   <body>
@@ -26,8 +27,11 @@
               <div class="form-control-feedback"></div>
             </div>
             <div class="col-sm-12 form-group form-control-feedback"></div>
+            <div class="col-sm-12 form-group">
+              <button type="button" class="btn btn-default" id="pq-button">Set P and Q</button>
+            </div>
           </div>
-          <button type="button" class="btn btn-default" id="pq-button">Set P and Q</button>
+          
 
           <div class="row">
             <div class="col-sm-12 form-group">
@@ -129,13 +133,13 @@
             <label for="msg-encoded">Encrypted Message:</label>
             <textarea class="form-control" id="msg-encoded" rows=5 cols=80></textarea>
           </div>
-          <div class="form-group">
+          <div class="form-group" id="decrypted-form">
             <label for="msg-decrypted">Decoded Message:</label>
             <textarea class="form-control" id="msg-decrypted" rows=5 cols=80></textarea>
+            <div class="form-control-feedback"></div>
           </div>
         </fieldset>
       </form>
-
       <script src="script.js"></script>
     </div>
   </body>
