--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
   </head>
   <title>RSA Worksheet</title>
   <body>
@@ -41,19 +44,19 @@
               </p>
             </div>
             <div class="col-sm-6 form-group">
-              <label for="n-input" class="control-label">N = P*Q (clock size)</label>
+              <label for="n-input" class="control-label">N = \(P*Q\) (clock size)</label>
               <input type="text" class="form-control" id="n-input"/>
             </div>
             <div class="col-sm-6 form-group">
-              <label for="z-input" class="control-label">Z = (P-1)*(Q-1)</label>
+              <label for="z-input" class="control-label">Z = \((P-1)*(Q-1)\)</label>
               <input type="text" class="form-control" id="z-input"/>
             </div>
           </div>
 
           <div class="row">
             <div class="col-sm-12 form-group">
-              <p>Then you need to find two numbers E and D such that E*D mod Z = 1.</p>
-              <label for="mod-candidates" class="control-label">Candidates for 1 mod Z: </label><br />
+              <p>Then you need to find two numbers E and D such that \((E*D) \mod Z = 1\).</p>
+              <label for="mod-candidates" class="control-label">Candidates for \(1 \mod Z\): </label><br />
               <textarea id="mod-candidates" class="form-control" cols=40 rows=5></textarea>
             </div>
           </div>
@@ -66,7 +69,7 @@
             <div class="col-sm-12 form-group">
               <p>
                 Using the candidate values for 1 mod Z from above, we can determine which ones are factorable.
-                We want two factors of K (the candidate value), which can be used for E and D so that e*d % z = 1,
+                We want two factors of K (the candidate value), which can be used for E and D so that \((E*D) \mod Z = 1\),
                 and so E and D are both relatively prime to Z.
               </p>
             </div>
@@ -130,11 +133,11 @@
             <textarea class="form-control" id="msg-ascii" rows=5 cols=80></textarea>
           </div>
           <div class="form-group">
-            <label for="msg-encoded">Encrypted Message:</label>
+            <label for="msg-encoded">Encrypted Message: (\(encrypted = char^E \mod N)\)</label>
             <textarea class="form-control" id="msg-encoded" rows=5 cols=80></textarea>
           </div>
           <div class="form-group" id="decrypted-form">
-            <label for="msg-decrypted">Decoded Message:</label>
+            <label for="msg-decrypted">Decoded Message: (\(decrypted = char^D \mod N)\)</label>
             <textarea class="form-control" id="msg-decrypted" rows=5 cols=80></textarea>
             <div class="form-control-feedback"></div>
           </div>
