added random button

--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
           <div class="row" id="pq-form">
             <div class="col-sm-6 form-group" id="p-form">
               <label for="p-input" class="control-label">P:</label>
-              <input type="text" class="form-control" id="p-input">
+              <div class="input-group">
+                <span class="input-group-btn">
+                  <button class="btn btn-secondary" type="button" id="p-random">Random</button>
+                </span>
+                <input type="text" class="form-control" id="p-input">
+              </div>
               <div class="form-control-feedback"></div>
             </div>
             <div class="col-sm-6 form-group" id="q-form">
               <label for="q-input" class="control-label">Q:</label>
-              <input type="text" class="form-control" id="q-input">
+              <div class="input-group">
+                <span class="input-group-btn">
+                  <button class="btn btn-secondary" type="button" id="q-random">Random</button>
+                </span>
+                <input type="text" class="form-control" id="q-input">
+              </div>
               <div class="form-control-feedback"></div>
             </div>
             <div class="col-sm-12 form-group form-control-feedback"></div>
