--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
             <textarea class="form-control" id="msg-plaintext" rows=5 cols=80></textarea>
           </div>
           <div class="form-group">
+            <p>
+              For the encoding process, each character is converted into its ASCII representation. 
+              Since simply encrypting each ASCII character individually leads to bad encryption, we instead
+              combine the ASCII string into one and slice it into chunks \(length(N)\). Then we
+              encrypt and decrypt those chunks. The ASCII values are padded to all be length 3, so
+              they can be converted back from the decrypted string easily.
+            </p>
+          </div>
+          <div class="form-group">
             <button class="btn btn-default" type="button" id="msg-plaintext-btn">Encode</button>
           </div>         
           <div class="form-group">
