added debug button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <fieldset>
           <legend class="display-4">Generate The Clock</legend>
           <hr>
-          <p>To generate the clock (or modulus), we need to pick two prime numbers, P and Q.</p>
+          <p>To generate the clock (or <span id="debug-data">modulus</span>), we need to pick two prime numbers, P and Q.</p>
 
           <div class="row" id="pq-form">
             <div class="col-sm-6 form-group" id="p-form">
