--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           <div class="form-group">
             <label for="msg-plaintext">Enter a message in plaintext here:</label>
-            <textarea class="form-control" id="msg-plaintext" rows=5 cols=80></textarea>
+            <textarea class="form-control mono-form" id="msg-plaintext" rows=5 cols=80></textarea>
           </div>
           <div class="form-group">
             <p>
@@ -147,12 +147,12 @@
             </p>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary" type="button" id="msg-plaintext-btn">Encode</button>
+            <button class="btn btn-primary" type="button" id="encode-button">Encode</button>
             <div class="spinner" id="encode-spinner"></div>
           </div>         
           <div class="form-group">
             <label for="msg-ascii">ASCII encoded message:</label>
-            <textarea class="form-control" id="msg-ascii" rows=5 cols=80></textarea>
+            <textarea class="form-control mono-form" id="msg-ascii" rows=5 cols=80></textarea>
           </div>
           <div class="form-group">
             <p>
@@ -163,7 +163,7 @@
           </div>
           <div class="form-group">
             <label for="msg-encoded">Encrypted Message: (\(encrypted = char^E \mod N)\)</label>
-            <textarea class="form-control" id="msg-encoded" rows=5 cols=80></textarea>
+            <textarea class="form-control mono-form" id="msg-encoded" rows=5 cols=80></textarea>
           </div>
           <div class="form-group">
             <p>
@@ -185,7 +185,7 @@
           </div>
           <div class="form-group" id="decrypted-form">
             <label for="msg-decrypted">Decoded Message: (\(decrypted = char^D \mod N)\)</label>
-            <textarea class="form-control" id="msg-decrypted" rows=5 cols=80></textarea>
+            <textarea class="form-control mono-form" id="msg-decrypted" rows=5 cols=80></textarea>
             <div class="form-control-feedback"></div>
           </div>
         </fieldset>
